--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,63 @@
 body {
   margin: 0;
-  font-family: Helvertica;
+  font-family: Helvetica;
 }
 
-h1 {
+header {
+  margin: 0;
   color: deeppink;
-  font-family: Verdena;
+  font-family: Verdana;
   display: flex;
   justify-content: center;
-  align-content: center;
+
   position: fixed;
   background-color: aqua;
+  top: 0;
   left: 0;
   right: 0;
+  padding: 5px;
+}
+
+main {
+  margin-top: 110px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 120px;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+.box {
+  display: flex;
+  flex-flow: column;
+}
+
+button {
+  display: flex;
+  position: static;
+  margin: 0;
+  align-items: center;
+  width: fit-content;
+  height: fit-content;
+}
+
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+li {
+  display: flex;
+  background-color: cadetblue;
+  padding: 3px;
+  border-radius: 3px;
 }
