--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,13 @@ a {
   display: flex;
   flex-flow: column;
   align-items: center;
+  padding: 15px;
+  width: 350px;
+  border: 100px;
+  border-color: black;
+  background-color: lightcyan;
+  margin-bottom: 14px;
+  border-radius: 8px;
 }
 
 button {
@@ -77,4 +84,5 @@ nav {
   padding-top: 5px;
   gap: 50px;
   width: 100%;
+  order: 2;
 }
