--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,16 @@ body {
 
 header {
   margin: 0;
-  color: white;
+  color: black;
   font-family: Helvetica;
   position: fixed;
   text-align: center;
-  background-color: lightseagreen;
+  background-color: rgb(214, 244, 242);
   width: 100%;
   top: 0;
-
+  border-bottom: 3px solid black;
   padding: 5px;
+  box-shadow: 0 4px 16px rgb(103, 119, 118);
 }
 
 main {
@@ -40,8 +41,7 @@ a {
   padding-right: 20px;
   padding-left: 20px;
   width: 350px;
-  border: 100px;
-  border-color: black;
+  border: 3px solid black;
   background-color: lightcyan;
   margin-bottom: 14px;
   border-radius: 8px;
@@ -50,6 +50,12 @@ a {
 button {
   display: flex;
   margin: 0;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 2px solid black;
+  border-radius: 4px;
+  background-color: rgb(48, 214, 206);
   width: fit-content;
   height: fit-content;
 }
@@ -76,7 +82,9 @@ footer {
   position: fixed;
   text-align: center;
   width: 100%;
-  background-color: lightseagreen;
+  background-color: rgb(214, 244, 242);
+  border-top: 3px black solid;
+  box-shadow: 0 4px 16px rgb(103, 119, 118);
 }
 
 nav {
