--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ a {
   padding-left: 20px;
   width: 350px;
   border: 3px solid black;
-  background-color: lightcyan;
+  background-color: rgb(249, 227, 227);
   margin-bottom: 14px;
   border-radius: 8px;
 }
@@ -55,9 +55,13 @@ button {
   padding-right: 10px;
   border: 2px solid black;
   border-radius: 4px;
-  background-color: rgb(48, 214, 206);
+  background-color: rgb(121, 231, 226);
   width: fit-content;
   height: fit-content;
+}
+
+button:hover {
+  background-color: rgb(7, 255, 243);
 }
 
 .tags {
@@ -71,8 +75,9 @@ button {
 
 li {
   display: flex;
-  background-color: rgb(161, 227, 223);
+  background-color: rgb(231, 169, 169);
   padding: 3px;
+  font-size: small;
   border-radius: 3px;
 }
 
